fix wrapping in small

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -91,7 +91,6 @@ dd {
 
 small {
 	color: #AAA;
-	white-space: nowrap;
 	font-weight: normal;
 }
 small a {
